src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer utilities {
  .container {
    width: 100%;
    max-width: calc(var(--container-width, 100%) + var(--container-padding-desktop, 32px) * 2);
    margin: 0 auto;
    padding: 0 var(--container-padding, 16px);

    @media screen and (min-width: 768px) {
      padding: 0 var(--container-padding-desktop, 32px);
    }
  }


  body {
    max-width: 100%;
  }

  h1, h2, h3, h4, h5, h6 {
    color: var(--headings-color, #000000);
  }


  *:focus-visible {
    outline: 2px solid black;
    outline-offset: 2px;
  }

  .text-link {
    @apply underline underline-offset-2 hover:no-underline
  }

  .rich-text a {
    @apply text-link;
  }

  .rich-text-big p {
    @apply text-2xl mb-2;
  }

  .prose {
    color: inherit;
  }

  h1, h2, h3, h4, h5, h6 {
    @apply text-center
  }

  .prose h1, .prose .h1 {
    @apply text-4xl sm:text-5xl md:text-7xl
  }

  .prose h2, .prose .h2 {
    @apply text-4xl sm:text-5xl
  }

  .prose h3, .prose .h3 {
    @apply text-3xl sm:text-4xl
  }

  .prose h4, .prose .h4 {
    @apply text-2xl sm:text-3xl
  }

  .prose h5, .prose .h4 {
    @apply text-xl sm:text-2xl
  }

  .prose h6, .prose .h6 {
    @apply text-base sm:text-xl
  }

  .prose .text-right {
    text-align: right;
  }

  .prose .text-justify {
    text-align: justify;
  }

  .swiper:not(.swiper-initialized).features-swiper .swiper-wrapper {
    @apply gap-4 min-[576px]:gap-9 min-[1200px]:gap-[40px] min-[1360px]:gap-10;
  }

  .swiper:not(.swiper-initialized).features-swiper .swiper-wrapper .swiper-slide {
    @apply w-full min-[576px]:w-[calc(50%-18px)] sm:w-[calc(33.333%-24px)] min-[1099px]:w-[calc(25%-27px)] min-[1200px]:w-[calc(20%-32px)] min-[1360px]:w-[calc(20%-32px)];
  }
}

